Updated CDN links

--- a/examples/app/index.html
+++ b/examples/app/index.html
@@ -95,9 +95,9 @@
 		config: {
 			libs: [
 				//use to load js or css assets immediately
-				"../../src/js/fstage.js", //or https://cdn.jsdelivr.net/gh/codi0/fstage@0.3.0/fstage.min.js
+				"../../src/js/fstage.js", //or https://cdn.jsdelivr.net/gh/codi0/fstage@0.3.0/src/js/fstage.min.js
 				"js/config.js",
-				"../../src/css/fstage.css", //or https://cdn.jsdelivr.net/gh/codi0/fstage@0.3.0/fstage.min.css
+				"../../src/css/fstage.css", //or https://cdn.jsdelivr.net/gh/codi0/fstage@0.3.0/src/css/fstage.min.css
 				"css/style.css",
 			],
 			modules: [
