--- a/examples/app/index.html
+++ b/examples/app/index.html
@@ -92,24 +92,25 @@
 	(function() {
 
 		//local config
-		var useCdn = true;
-		var version = '0.3.1';
-		var isHybrid = !!window._cordovaNative;
-		var isPwa = window.matchMedia && window.matchMedia('(display-mode: standalone)').matches;
-		var baseUrl = location.href.split('?')[0].replace(/\/$/g, '') + '/'; //baseUrl must be the absolute URL to this file
+		var useCdn = true; //whether to load fstage from cdn
+		var version = '0.3.1'; //version of fstage library to use
+		var baseUrl = location.href; //baseUrl must be the absolute URL to this file
 
-		//fstage file path
-		var fstagePath = function(type) {
-			if(useCdn) {
-				return "https://cdn.jsdelivr.net/gh/codi0/fstage@" + version + "/src/" + type + "/fstage.min." + type;
-			} else {
-				return "../../src/" + type + "/fstage." + type;
+		//path helper
+		var paths = {
+
+			fstage: function(type) {
+				if(useCdn) {
+					return "https://cdn.jsdelivr.net/gh/codi0/fstage@" + version + "/src/" + type + "/fstage.min." + type;
+				} else {
+					return "../../src/" + type + "/fstage." + type;
+				}
+			},
+
+			app: function(path) {
+				return baseUrl.split('?')[0].replace(/\/$/g, '') + '/' + path;
 			}
-		};
 
-		//app file path
-		var appPath = function(path) {
-			return baseUrl + path;
 		};
 
 		//fstage config
@@ -119,21 +120,27 @@
 
 				libs: [
 					//use to load js or css assets immediately
-					fstagePath('js'),
-					"js/config.js",
-					fstagePath('css'),
-					"css/style.css",
+					paths.fstage('js'),
+					paths.app("js/config.js"),
+					paths.fstage('css'),
+					paths.app("css/style.css")
 				],
 
 				modules: [
-					//use to customise which of the core Fstage ES6 modules are loaded (see fstage.js for a full list)
+					//use to customise which of the core Fstage ES6 modules are loaded
+					//see https://github.com/codi0/fstage/blob/master/src/js/fstage.js for a full list of core modules
 				],
 
 				appendModules: [
-					//use to load additional ES6 modules, without replacing core modules (E.g. application modules)
-					appPath("js/app.mjs")
+					//use to load additional ES6 modules, after core modules are loaded
+					paths.app("js/app.mjs")
 				]
 
+			},
+
+			env: {
+				isHybrid: !!window._cordovaNative,
+				isPwa: window.matchMedia && window.matchMedia('(display-mode: standalone)').matches
 			}
 
 		};
@@ -142,12 +149,12 @@
 		document.title = 'Loading...'
 
 		//is hybrid?
-		if(isHybrid) {
+		if(Fstage.env.isHybrid) {
 			document.documentElement.classList.add('hybrid');
 		}
 		
 		//is pwa?
-		if(isPwa) {
+		if(Fstage.env.isPwa) {
 			document.documentElement.classList.add('pwa');
 		}
 
@@ -252,7 +259,7 @@
 				});
 
 				//load manifest?
-				if(!isHybrid) {
+				if(!Fstage.env.isHybrid) {
 					var manifest = document.createElement('link');
 					manifest.rel = "manifest";
 					manifest.href = "manifest.json";
@@ -260,7 +267,7 @@
 				}
 				
 				//load icon?
-				if(!isHybrid) {
+				if(!Fstage.env.isHybrid) {
 					var icon = document.querySelector('[rel="icon"]');
 					icon.type = "image/png";
 					icon.sizes = "any";
