--- a/examples/ipfs/streaming.html
+++ b/examples/ipfs/streaming.html
@@ -26,7 +26,8 @@
 				http: 'https://multiplatform-f.akamaihd.net/i/multi/will/bunny/big_buck_bunny_,640x360_400,640x360_700,640x360_1000,950x540_1500,.f4v.csmil/master.m3u8'
 			};
 			//extract exports
-			var { ipfs, hls } = exports;
+			var hls = exports.hls.default;
+			var ipfs = exports.ipfs.default;
 			//create ipfs node
 			var ipfsNode = await ipfs();
 			var nodeId = await ipfsNode.id();
