--- a/examples/app/index.html
+++ b/examples/app/index.html
@@ -122,8 +122,10 @@
 		//config
 		var config = {
 			preloadUrls: [
-				'https://cdn.jsdelivr.net/gh/codi0/fstage@master/src/css/classes.min.css',
-				'https://cdn.jsdelivr.net/gh/codi0/fstage@master/src/js/fstage.min.js'
+				'../../src/css/classes.css',
+				'../../src/js/fstage.js'
+				//'https://cdn.jsdelivr.net/gh/codi0/fstage@master/src/css/classes.min.css',
+				//'https://cdn.jsdelivr.net/gh/codi0/fstage@master/src/js/fstage.min.js'
 			],
 			bootstrapUrls: [
 				'./js/bootstrap.mjs'
